[package]
name = "rss_feed_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rss_feed_generator_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
chrono = "0.4.37"
ureq = "2.9.6"
actix-web = "4.5.1"

